style/visual.css
#visual {
    position: absolute;
    top: 0;
    padding-top: 26px;
    min-width: 100%;
    min-height: 100%;
}
#root {
    padding: 8px;
    box-sizing: border-box;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
}
.property {
    overflow: hidden;
    margin: 6px 0;
}
.key {
    float: left;
    font-weight: bold;
}
.key::after {
    content: ":\00A0";
}
.array-content, .object-content {
    padding-left: 4ex;
}
/* 隐藏数组的键 */
.array-content>.property>.key {
    display: none;
}

/* 不同类型的配置 */
.type-string>.value>span {
    color: green;
    white-space: pre;
}
.type-null>.value>span, .type-undefined>.value>span {
    color: gray;
}
.boolean>.value>span {
    color: blue;
}

